--- a/src/neutral/CMakeLists.txt
+++ b/src/neutral/CMakeLists.txt
@@ -1,3 +1,5 @@
+set_directory_properties(PROPERTIES LABEL neutral)
+
 add_library(neutral OBJECT neutral.f90 atmos.f90 wind.f90
 $<$<NOT:$<BOOL:${hwm14}>>:${PROJECT_SOURCE_DIR}/src/vendor/hwm14_dummy.f90>
 )
@@ -26,34 +28,3 @@ msis::msis_ifc
 $<$<BOOL:${hwm14}>:hwm14::hwm_ifc>
 ffilesystem::filesystem
 )
-
-# self-tests
-if(${PROJECT_NAME}_BUILD_TESTING)
-
-add_executable(test_proj test_proj.f90
-$<$<NOT:$<BOOL:${netcdf}>>:$<TARGET_OBJECTS:nc4fortran_dummy>>
-)
-
-foreach(t newton spherical geomagnetic meshobj meshobj_cart meshobj_dipole grid autogrid neutral interp
-neutraldata neutraldata3D_mpi neutraldata3D_geom_mpi neutraldata3D_geog_mpi neutraldata2D neutraldata2Daxisymm neutraldata2Dcart
-)
-
-  target_sources(test_proj PRIVATE $<TARGET_OBJECTS:${t}>)
-
-endforeach()
-
-target_include_directories(test_proj PRIVATE ${PROJECT_BINARY_DIR}/include)
-target_link_libraries(test_proj PRIVATE config const reader inputdata
-timeutils mpimod const
-MPI::MPI_Fortran
-msis::msis_ifc
-$<$<BOOL:${hwm14}>:hwm14::hwm_ifc>
-ffilesystem::filesystem
-)
-if(CMAKE_Fortran_COMPILER_ID MATCHES "^Intel")
-  set_target_properties(test_proj PROPERTIES LINKER_LANGUAGE Fortran)
-else()
-  set_target_properties(test_proj PROPERTIES LINKER_LANGUAGE CXX)
-endif()
-
-endif(${PROJECT_NAME}_BUILD_TESTING)
