test/interp move

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -69,5 +69,6 @@ add_subdirectory(coord)
 add_subdirectory(diffusion)
 add_subdirectory(io)
 add_subdirectory(ionization)
+add_subdirectory(interpolation)
 add_subdirectory(mpi)
 add_subdirectory(neutral)
