--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -72,3 +72,4 @@ add_subdirectory(ionization)
 add_subdirectory(interpolation)
 add_subdirectory(mpi)
 add_subdirectory(neutral)
+add_subdirectory(potential)
