--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -67,9 +67,10 @@ endif()
 
 add_subdirectory(coord)
 add_subdirectory(diffusion)
+add_subdirectory(interpolation)
 add_subdirectory(io)
 add_subdirectory(ionization)
-add_subdirectory(interpolation)
 add_subdirectory(mpi)
 add_subdirectory(neutral)
 add_subdirectory(potential)
+add_subdirectory(temporal)
