test: frontend move

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -59,11 +59,65 @@ FIXTURES_SETUP mumps_fxt
 
 dll_test_path("SCALAPACK::SCALAPACK;MUMPS::MUMPS" "scalapack;mumps_basic")
 
+add_test(NAME gemini_fortran COMMAND gemini.bin -h)
+set_tests_properties(gemini_fortran PROPERTIES
+PASS_REGULAR_EXPRESSION "EOF: gemini.bin"
+FIXTURES_SETUP gemini_exe_fxt
+FIXTURES_REQUIRED "mumps_fxt;hwloc_fxt"
+LABELS unit
+)
+dll_test_path("ffilesystem::filesystem;h5fortran::h5fortran;LAPACK::LAPACK;HDF5::HDF5" gemini_fortran)
 
-# ---
+if(cpp)
+
+add_test(NAME gemini_cpp COMMAND gemini_c.bin -h)
+set_tests_properties(gemini_cpp PROPERTIES
+PASS_REGULAR_EXPRESSION "EOF: gemini.bin"
+FIXTURES_SETUP gemini_exe_fxt
+FIXTURES_REQUIRED "mumps_fxt;hwloc_fxt"
+LABELS unit
+)
+dll_test_path("ffilesystem::filesystem;h5fortran::h5fortran;LAPACK::LAPACK;HDF5::HDF5" gemini_cpp)
+
+endif()
+
+
+add_test(NAME gemini3d_run_ok COMMAND gemini3d.run)
+set_tests_properties(gemini3d_run_ok PROPERTIES
+PASS_REGULAR_EXPRESSION "EOF: gemini3d.run"
+FIXTURES_SETUP gemini_exe_fxt
+TIMEOUT 10
+)
+
+# --- Windows needs DLLs on path
+dll_test_path("ffilesystem::filesystem;h5fortran::h5fortran;HDF5::HDF5" "gemini3d_run_ok")
+
+
 if(NOT ${PROJECT_NAME}_BUILD_TESTING)
   return()
 endif()
+
+
+add_executable(echo_path echo_path.f90)
+add_test(NAME EchoEnvVar COMMAND echo_path)
+
+
+add_test(NAME magcalc_exe_ok COMMAND magcalc.bin)
+set_tests_properties(magcalc_exe_ok PROPERTIES
+PASS_REGULAR_EXPRESSION "EOF: magcalc.bin"
+LABELS unit
+TIMEOUT 10
+)
+
+add_test(NAME magcalc_run_ok COMMAND magcalc.run)
+set_tests_properties(magcalc_run_ok PROPERTIES
+PASS_REGULAR_EXPRESSION "EOF: magcalc.run"
+TIMEOUT 10
+)
+
+dll_test_path("ffilesystem::filesystem;h5fortran::h5fortran;HDF5::HDF5" "magcalc_exe_ok;magcalc_run_ok")
+
+
 
 add_subdirectory(coord)
 add_subdirectory(diffusion)
