--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -59,6 +59,22 @@ FIXTURES_SETUP mumps_fxt
 
 dll_test_path("SCALAPACK::SCALAPACK;MUMPS::MUMPS" "scalapack;mumps_basic")
 
+
+if(mpi AND HWLOC_FOUND)
+
+add_executable(test_hwloc test_hwloc.c)
+target_link_libraries(test_hwloc PRIVATE hwloc_c HWLOC::HWLOC)
+# NOTE: MPIEXEC_MAX_NUMPROCS uses less robust methods than hwloc, particularly on ARM (Raspberry Pi)
+add_test(NAME HWLOC COMMAND test_hwloc ${Ncpu})
+set_tests_properties(HWLOC PROPERTIES
+FIXTURES_SETUP hwloc_fxt
+TIMEOUT 10
+PROCESSORS 1
+LABELS unit
+)
+
+endif()
+
 add_test(NAME gemini_fortran COMMAND gemini.bin -h)
 set_tests_properties(gemini_fortran PROPERTIES
 PASS_REGULAR_EXPRESSION "EOF: gemini.bin"
