--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,13 @@
 set_directory_properties(PROPERTIES LABELS unit)
 
-if(NOT BUILD_TESTING)
-  return()
-endif()
+if(matlab)
+  include(${PROJECT_SOURCE_DIR}/cmake/matlab.cmake)
+endif(matlab)
 
-if(NOT mpi)
+include(${PROJECT_SOURCE_DIR}/cmake/python.cmake)
+
+if(mpi)
 # keep this if(mpi) because these tests truly use MPI -- don't work with MPI stub
-  return()
-endif()
 
 add_executable(test_mpi test_mpi.f90)
 target_link_libraries(test_mpi PRIVATE MPI::MPI_Fortran)
@@ -60,7 +60,7 @@ FIXTURES_SETUP mumps_fxt
 dll_test_path("SCALAPACK::SCALAPACK;MUMPS::MUMPS" "scalapack;mumps_basic")
 
 
-if(mpi AND HWLOC_FOUND)
+if(HWLOC_FOUND)
 
 add_executable(test_hwloc test_hwloc.c)
 target_link_libraries(test_hwloc PRIVATE hwloc_c HWLOC::HWLOC)
@@ -73,7 +73,10 @@ PROCESSORS 1
 LABELS unit
 )
 
-endif()
+endif(HWLOC_FOUND)
+
+endif(mpi)
+
 
 add_test(NAME gemini_fortran COMMAND gemini.bin -h)
 set_tests_properties(gemini_fortran PROPERTIES
@@ -83,6 +86,7 @@ FIXTURES_REQUIRED "mumps_fxt;hwloc_fxt"
 LABELS unit
 )
 dll_test_path("ffilesystem::filesystem;h5fortran::h5fortran;LAPACK::LAPACK;HDF5::HDF5" gemini_fortran)
+
 
 if(cpp)
 
@@ -107,6 +111,9 @@ TIMEOUT 10
 
 # --- Windows needs DLLs on path
 dll_test_path("ffilesystem::filesystem;h5fortran::h5fortran;HDF5::HDF5" "gemini3d_run_ok")
+
+
+add_subdirectory(compare)
 
 
 if(NOT ${PROJECT_NAME}_BUILD_TESTING)
