--- a/test/coord/CMakeLists.txt
+++ b/test/coord/CMakeLists.txt
@@ -23,6 +23,13 @@ ffilesystem::filesystem
 )
 add_test(NAME fullgrid_dipole_testdriver COMMAND fullgrid_dipole_testdriver)
 
+add_executable(fullgrid_dipole_regen fullgrid_dipole_regen.f90)
+target_link_libraries(fullgrid_dipole_regen PRIVATE grid newton spherical geomagnetic meshobj_dipole meshobj const
+$<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
+ffilesystem::filesystem
+)
+add_test(NAME fullgrid_dipole_regen COMMAND fullgrid_dipole_regen)
+
 add_executable(fullgrid_cartesian_testdriver fullgrid_cartesian_testdriver.f90)
 target_link_libraries(fullgrid_cartesian_testdriver PRIVATE newton spherical geomagnetic meshobj_cart meshobj const
 $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
