--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -10,10 +10,12 @@ add_library(errors OBJECT error_stop.f90)
 target_link_libraries(errors PRIVATE const h5fortran::h5fortran)
 
 # --- config
-add_library(config OBJECT config.f90 config_nml.f90 config_ini.f90)
-target_link_libraries(config PRIVATE const gemini3d_sysinfo
+add_library(gemini3d_config OBJECT config.f90 config_nml.f90 config_ini.f90)
+target_link_libraries(gemini3d_config PRIVATE const gemini3d_sysinfo
 ffilesystem::filesystem
 )
+
+install(FILES ${PROJECT_BINARY_DIR}/include/gemini3d_config.mod TYPE INCLUDE)
 
 # --- io
 if(NOT netcdf)
@@ -32,7 +34,8 @@ milestone.f90
 $<$<NOT:$<BOOL:${netcdf}>>:$<TARGET_OBJECTS:nc4fortran_dummy>>
 )
 
-target_link_libraries(io PRIVATE calculus config const reader grid mpimod sanity_check timeutils
+target_link_libraries(io PRIVATE
+calculus gemini3d_config const reader grid mpimod sanity_check timeutils
 h5fortran::h5fortran
 $<$<BOOL:${netcdf}>:nc4fortran::nc4fortran>
 ffilesystem::filesystem
