--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -251,6 +251,9 @@ gemini3d_c
 gemini3d
 )
 target_compile_features(gemini_c.bin PRIVATE cxx_std_17)
+target_compile_definitions(gemini_c.bin PRIVATE
+$<$<BOOL:${MSVC}>:_CRT_SECURE_NO_WARNINGS>
+)
 
 install(TARGETS gemini_c.bin gemini3d_cpp
 EXPORT ${PROJECT_NAME}-targets
