remove NetCDF4 and Raw file I/O

--- a/src/io/CMakeLists.txt
+++ b/src/io/CMakeLists.txt
@@ -18,35 +18,25 @@ ffilesystem::filesystem
 install(FILES ${PROJECT_BINARY_DIR}/include/gemini3d_config.mod TYPE INCLUDE)
 
 # --- io
-if(NOT netcdf)
-  add_library(nc4fortran_dummy OBJECT $<$<NOT:$<BOOL:${netcdf}>>:${PROJECT_SOURCE_DIR}/src/vendor/nc4fortran_dummy.f90>)
-  install(FILES ${PROJECT_BINARY_DIR}/include/nc4fortran.mod TYPE INCLUDE)
-endif()
-
 configure_file(output.in.f90 output.f90 @ONLY)
 add_library(io OBJECT io.f90 ${CMAKE_CURRENT_BINARY_DIR}/output.f90
-aurora.f90 aurora_raw.f90 aurora_hdf5.f90 aurora_ncdf.f90
+aurora.f90 aurora_hdf5.f90
 cond.f90 cond_hdf5.f90
-mag.f90 mag_hdf5.f90 mag_ncdf.f90 mag_raw.f90
-plasma_input.f90 plasma_input_hdf5.f90 plasma_input_ncdf.f90 plasma_input_raw.f90
-plasma_output.f90 plasma_output_hdf5.f90 plasma_output_ncdf.f90 plasma_output_raw.f90
+mag.f90 mag_hdf5.f90
+plasma_input.f90 plasma_input_hdf5.f90
+plasma_output.f90 plasma_output_hdf5.f90
 milestone.f90
-$<$<NOT:$<BOOL:${netcdf}>>:$<TARGET_OBJECTS:nc4fortran_dummy>>
 )
 
 target_link_libraries(io PRIVATE
 calculus gemini3d_config const interp reader grid mpimod sanity_check timeutils
 h5fortran::h5fortran
-$<$<BOOL:${netcdf}>:nc4fortran::nc4fortran>
 ffilesystem::filesystem
 )
 
 # --- reader
-add_library(reader OBJECT reader.f90 reader_hdf5.f90 reader_ncdf.f90 reader_raw.f90
-$<$<NOT:$<BOOL:${netcdf}>>:$<TARGET_OBJECTS:nc4fortran_dummy>>
-)
+add_library(reader OBJECT reader.f90 reader_hdf5.f90)
 target_link_libraries(reader PRIVATE const
 h5fortran::h5fortran
-$<$<BOOL:${netcdf}>:nc4fortran::nc4fortran>
 ffilesystem::filesystem
 )
