--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -11,8 +11,7 @@ $<TARGET_OBJECTS:meshobj> $<TARGET_OBJECTS:meshobj_cart> $<TARGET_OBJECTS:meshob
 $<TARGET_OBJECTS:reader> $<TARGET_OBJECTS:io> $<TARGET_OBJECTS:interp>
 )
 target_link_libraries(magcalc.bin PRIVATE exe_frontend
-sanity_check errors gemini3d_config timeutils const gemini3d_sysinfo
-hwloc_ifc hwloc_c
+sanity_check errors gemini3d_config timeutils const gemini3d_sysinfo cpu_count
 h5fortran::h5fortran
 ffilesystem::filesystem
 )
@@ -26,7 +25,7 @@ $<$<NOT:$<BOOL:${mpi}>>:MUMPS::MPISEQ>
 )
 
 # --- gemini3d.run Fortran front end
-add_subdirectory(hwloc)
+add_subdirectory(cpu)
 
 string(JOIN " " gemini_features
 REALBITS:${realbits}
@@ -36,7 +35,6 @@ $<$<BOOL:${msis2}>:MSIS2>
 $<$<BOOL:${hwm14}>:HWM14>
 $<$<BOOL:${scotch}>:SCOTCH>
 $<$<BOOL:${openmp}>:OPENMP>
-$<$<BOOL:${HWLOC_FOUND}>:HWLOC>
 )
 configure_file(exe_frontend.in.f90 exe_frontend.f90.in @ONLY)
 file(GENERATE OUTPUT exe_frontend.f90
@@ -44,7 +42,7 @@ INPUT ${CMAKE_CURRENT_BINARY_DIR}/exe_frontend.f90.in
 )
 
 add_library(exe_frontend OBJECT ${CMAKE_CURRENT_BINARY_DIR}/exe_frontend.f90)
-target_link_libraries(exe_frontend PRIVATE gemini3d_config hwloc_ifc hwloc_c timeutils const
+target_link_libraries(exe_frontend PRIVATE gemini3d_config timeutils const
 ffilesystem::filesystem
 )
 
@@ -53,10 +51,8 @@ add_executable(gemini3d.run gemini3d_run.f90
 $<TARGET_OBJECTS:exe_frontend>
 )
 target_link_libraries(gemini3d.run PRIVATE
-const gemini3d_config timeutils autogrid reader gemini3d_sysinfo
+const gemini3d_config timeutils autogrid reader gemini3d_sysinfo cpu_count
 h5fortran::h5fortran
-hwloc_ifc hwloc_c
-$<$<BOOL:${HWLOC_FOUND}>:HWLOC::HWLOC>
 $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
 ffilesystem::filesystem
 )
@@ -71,9 +67,8 @@ add_executable(magcalc.run magcalc_run.f90
 $<TARGET_OBJECTS:exe_frontend>
 )
 target_link_libraries(magcalc.run PRIVATE
-autogrid reader gemini3d_config timeutils const hwloc_ifc hwloc_c gemini3d_sysinfo
+autogrid reader gemini3d_config timeutils const gemini3d_sysinfo cpu_count
 h5fortran::h5fortran
-$<$<BOOL:${HWLOC_FOUND}>:HWLOC::HWLOC>
 $<$<BOOL:${HDF5_HAVE_PARALLEL}>:MPI::MPI_Fortran>
 ffilesystem::filesystem
 )
